@@ -336,7 +336,7 @@ namespace libtorrent
 		, m_last_stats_flip(time_now())
 		, m_file_pool(40)
 		, m_hash_thread(this)
-		, m_disk_cache(block_size, m_hash_thread, ios)
+		, m_disk_cache(block_size, m_hash_thread, ios, post_alert)
 		, m_in_progress(0)
 		, m_to_issue(0)
 		, m_to_issue_end(0)
